# Avionics

./: CMakeLists.txt  README.md  run.sh
src/: main.c
src/app/: Beacon_Handler.c  Beacon_Handler.h  EJC_Handler.c  EJC_Handler.h  Log.c  Log.h  Operations.c  Operations.h  User_CMD_Handler.c  User_CMD_Handler.h
src/common/: BaseDef.c  BaseDef.h  Time.c  Time.h
src/driver/: BMP180.c  BMP180.h  BT.c  BT.h  GPS.c  GPS.h  IMU.c  IMU.h
src/hal/: CPU_Temp.c  CPU_Temp.h  GPIO_Handler.c  GPIO_Handler.h  I2C_IO.c  I2C_IO.h  SPI_IO.c  SPI_IO.h  Serial_IO.c  Serial_IO.h
